Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test11.java
/*
 * Test11
 * @ Objetivo: Detectar que falta la expresion a ser analizada por el if.
 */
class clase
{
	dynamic boolean metodo()
	{
		if ()
			return true;
		else
			return false;
	}
	
}

